--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@ Resume
    <br>
 
  <h2>Professional Objective Statement</h2>
-  <p>lorem ipsum dolor sit</p>
+  <p>I'm a junior majoring in Information Technology, looking for a job in cybersecurity, specifically a SOC-related job</p>
    <br>
 
  <h3>Education</h3>
