--- a/resume.html
+++ b/resume.html
@@ -9,8 +9,10 @@ Resume
  </head>
  
  <body>
+
+ <h1>Resume</h1> <br>
  
- <h1>Contact Information</h1>
+ <h2>Contact Information</h2>
   <p>Name: Shane Donnelly</p>
   <p>UCF Email Address: shane.donnelly@ucf.edu</p>
   <p>LinkedIn Profile Link: https://www.linkedin.com/in/shane-p-donnelly/</p>
@@ -20,12 +22,12 @@ Resume
   <p>I'm a junior majoring in Information Technology, looking for a job in cybersecurity, specifically a SOC-related job</p>
    <br>
 
- <h3>Education</h3>
+ <h2>Education</h2>
   <p>Bachelor of Science, Information Technology, UCF May 2027</p>
   <p>Secure Computing and Networks Minor, UCF May 2027</p>
    <br>
 
- <h4>Relevant Work Experience</h4>
+ <h2>Relevant Work Experience</h2>
   <p>Employer: University of Central Florida Information Technology</p>
   <p>Job Title: Security Operations Center Intern</p>
   <p>Job Description: Collect evidence from SIEMs and other data sources for security investigations as part of UCF's Security Incident Response Team</p>
@@ -37,11 +39,11 @@ Resume
   <p>Job Duration: Jan 2024 - May 2024</p>
    <br>
 
- <h5>Project Links</h5>
+ <h2>Project Links</h2>
   <p>Link 1: HCI Project for CTFClock</p>
-  <p>Link 2: Horse Plinko? lorem ipsum</p>
+  <p>Link 2: Horse Plinko Wordpress</p>
 
- <h6>Skills</h6>
+ <h2>Skills</h2>
   <p>Python, C, MySQL, KQL, and Java. Wireshark, PowerShell, WSL, Microsoft Office</p>
 
  </body>
