--- a/resume.html
+++ b/resume.html
@@ -41,9 +41,9 @@ Resume
 
  <h2>Project Links</h2>
   <p>Link 1: HCI Project for CTFClock</p>
-   <a href="./Project1.html">Project1Link</a>
+   <a href="./project1.html">Project1Link</a>
   <p>Link 2: Horse Plinko Wordpress</p>
-   <a href="./Project2.html">Project2Link</a>
+   <a href="./project2.html">Project2Link</a>
 
  <h2>Skills</h2>
   <p>Python, C, MySQL, KQL, and Java. Wireshark, PowerShell, WSL, Microsoft Office</p>
