--- a/project1.html
+++ b/project1.html
@@ -13,6 +13,6 @@ Project 1 Linked Page resume
  <h2>Project 1: HCI Figma</h2>
  <p>Project Title: CTFClock</p>
  <p>Image: </p>
- <img src="/project1cis4004resume.png" alt="CTFClock Image">
+ <img src="project1cis4004resume.png" alt="CTFClock Image">
  <p>A description of the project: Worked as part of a group project to redesign CTFTime's website interface. Used Figma to modernize the interface for CTFs, users, and leaderboards</p>
  <p>Skills learned from the project: Learned how to use Figma, as well as basic HCI principles and design elements</p>
