--- a/project2.html
+++ b/project2.html
@@ -10,10 +10,16 @@ Project 2 Linked Page resume
  
  <body>
  
- <h2>Project 2: Horse Plinko Wordpress</h2>
- <p>Project Title: Wordpress site for HackUCF Horse Plinko</p>
- <p>Image: </p>
- <img src="/project2.jpg" alt="Wordpress site for Horse Plinko">
- <p>A description of the project: Worked to create a wordpress website for HackUCF's Horse Plinko competition, which I helped blackteam. 
-   Created a wordpress site, populated the site with products and set up a payment function for a wordpress store </p>
- <p>Skills learned from the project: Learned how to use Wordpress to set up a website, and how to set up a store interface on wordpress</p>
+ <h2>Project 2: Virtual Machines</h2>
+ <p>Project Title: Windows Virtual Machines</p>
+ <p>Image 1: </p>
+ <img src="/square1.jpg" alt="Image 1, Windows VM Task Creation">
+ <p>Image 2: </p>
+ <img src="/square1.jpg" alt="Image 2, Windows VM Task On Computer">
+ <p>Image 3: </p>
+ <img src="/square1.jpg" alt="Image 3, Local User In Domain">
+ <p>Image 4: </p>
+ <img src="/square1.jpg" alt="Image 4, Computer in Domain">
+ <p>A description of the project: Worked on multiple projects throughout the semester creating Virtual Machines on Windows, with different versions
+  Then connected the VMs to domains, added permissions, and added domain and local users along with tasks that reflected in the domain</p>
+ <p>Skills learned from the project: Learned how to set up Windows VMs, and how to make a domain and log into it with other computers</p>
