--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@ Resume
  <h2>Project Links</h2>
   <p>Link 1: HCI Project for CTFClock</p>
    <a href="./project1.html">Project1Link</a>
-  <p>Link 2: Horse Plinko Wordpress</p>
+  <p>Link 2: Virtual Machines</p>
    <a href="./project2.html">Project2Link</a>
 
  <h2>Skills</h2>
