--- a/project2.html
+++ b/project2.html
@@ -13,13 +13,13 @@ Project 2 Linked Page resume
  <h2>Project 2: Virtual Machines</h2>
  <p>Project Title: Windows Virtual Machines</p>
  <p>Image 1: </p>
- <img src="/square1.jpg" alt="Image 1, Windows VM Task Creation">
+ <img src="/square1.png" alt="Image 1, Windows VM Task Creation">
  <p>Image 2: </p>
- <img src="/square1.jpg" alt="Image 2, Windows VM Task On Computer">
+ <img src="/square2.png" alt="Image 2, Windows VM Task On Computer">
  <p>Image 3: </p>
- <img src="/square1.jpg" alt="Image 3, Local User In Domain">
+ <img src="/square3.png" alt="Image 3, Local User In Domain">
  <p>Image 4: </p>
- <img src="/square1.jpg" alt="Image 4, Computer in Domain">
+ <img src="/square4.png" alt="Image 4, Computer in Domain">
  <p>A description of the project: Worked on multiple projects throughout the semester creating Virtual Machines on Windows, with different versions
   Then connected the VMs to domains, added permissions, and added domain and local users along with tasks that reflected in the domain</p>
  <p>Skills learned from the project: Learned how to set up Windows VMs, and how to make a domain and log into it with other computers</p>
